Skill Screen updates + Pickpocketing Problems